--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <div id='content'>
   <form accept-charset="UTF-8" action="http://roxanne.heroku.com/register" class="member_new" id="member_new" method="post">
     <input name="registrer_token" type="hidden" value="totonikapozobazopozujimaduzujejapumatero"/>
-    <input name="callback" type="hidden" value=""/>
+    <input name="callback" type="hidden" value="http://tupac-amaru.heroku.com/callback"/>
 
     <div class='field'>
       <label for="member_Company Name">Company name</label>
