duplicating token coz a horrible typo

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
 <div id='content'>
   <form accept-charset="UTF-8" action="https://cirrus.app47.com/register" class="member_new" id="member_new" method="post">
     <input name="registrer_token" type="hidden" value="totonikapozobazopozujimaduzujejapumatero"/>
+    <input name="register_token" type="hidden" value="totonikapozobazopozujimaduzujejapumatero"/>
     <input name="callback" type="hidden" value="http://tupac-amaru.heroku.com/callback"/>
 
     <div class='field'>
